<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flight_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mvorotnikov@sfedu.ru">max</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>custom_timers_ros</depend>
  <depend>nav_msgs</depend>
  <!-- <depend>custom_ros_utils</depend> -->
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>drone_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>euler_angles_lib</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
